--- a/drafts/1768960774267-test-2.md
+++ b/drafts/1768960774267-test-2.md
@@ -1,3 +1,3 @@
 # test 2
 
-Getting ready for Gordon meeting.. this may not be a lot of fun.. lets see..
+Getting ready for Gordon meeting.. this may not be a lot of fun.. lets see.. we should just accept it straight away that i should have followed up myslef with Bruce.. ugh
